# fedimint-regtest-faucet

./: .gitignore  flake.nix  pyproject.toml
fedimint_regtest_faucet/: __init__.py
fedimint_regtest_faucet/templates/: index.html  webln.html
