[tool.poetry]
name = "fedimint-regtest-faucet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
# faucet = 'flask --app fedimint_regtest_faucet run --host=0.0.0.0'
faucet = 'fedimint_regtest_faucet:run'

[tool.poetry.dependencies]
python = "^3.10"
flask-qrcode = "^3.1.0"
flask = "^2.2.2"
jinja2 = "^3.1.2"
markupsafe = "^2.1.2"
pillow = "^9.4.0"
werkzeug = "^2.2.3"
click = "^8.1.3"
importlib-metadata = "^6.0.0"
itsdangerous = "^2.1.2"
pylightning = "^0.0.7.3"
qrcode = "^7.4.2"
zipp = "^3.13.0"
wheel = "^0.38.4"
requests = "^2.28.2"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
